--- a/front-end/src/styles/sub-header.css
+++ b/front-end/src/styles/sub-header.css
@@ -10,7 +10,7 @@
 
 .sub-header__title {
   margin: 0;
-  padding-left: 5rem;
+  padding-left: 7rem;
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
@@ -18,9 +18,10 @@
 }
 
 .sub-header__faq-button {
-  width: 2rem;
-  height: 2rem;
-  font-size: 1rem;
+  width: 2.1rem;
+  height: 2.1rem;
+  margin-right: 4rem;
+  font-size: 1.2rem;
   font-weight: bold;
   background-color: black;
   color: white;
@@ -31,9 +32,25 @@
   justify-content: center;
   align-items: center;
   transition: background-color 0.2s ease;
+  animation: pulse 1.5s ease-in-out infinite;
 }
 
 .sub-header__faq-button:hover {
   background-color: white;
   color: black;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 0.9;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
