--- a/front-end/src/styles/submit-button.css
+++ b/front-end/src/styles/submit-button.css
@@ -6,7 +6,7 @@
   background-color: lightgray;
   color: black;
   border: none;
-  border-radius: 4px;
+  border-radius: 1rem;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
